refactor: 비즈니스 로직을 수행하는 Manager 객체 도입
- 도메인 객체는 데이터 처리만 수행하고, manager가 비즈니스 로직을 수행한다.
- 이를 통해 비즈니스 로직과 데이터 처리 로직을 분리하여 단일 책임 원칙을 지킨다.